# learn_anything

./: .editorconfig  .flake8  .gitignore  .style.yapf  Doxyfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: doxygen.yml  python-checks.yml
backend/: Dockerfile  __init__.py  app.py  ranking_links.py  requirements.txt  result.json
backend/data/: AI Research.json  cleaned_output.json  message.txt
backend/results/: graph.gexf
backend/scripts/: format_python.sh  lint.sh  setup.sh
backend/src/: __init__.py  bq_helper.py  get_graph_data.py  graph_creation.py  ranking_links.py  report_generator.py  wiki_scraper.py
backend/src/graph/: ranking_links.py  scraped_data.json  wiki_scraper.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/prisma/: seed.ts
frontend/scripts/: backup-db.sh  restore-db.sh
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/graph/: route.ts
frontend/src/app/api/process-wiki/: route.ts
frontend/src/app/contexts/: ThemeContext.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/components/: NodeModal.tsx  knowledgeGraph.tsx  navbar.tsx  wikiUrlForm.tsx
frontend/src/services/: api.ts
frontend/src/types/: knowledge.ts  recharts.d.ts
tools/: jsdoc2doxygen.py
